tests/ui/parser/issues/unnessary-error-issue-138401.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/unnessary-error-issue-138401.rs:3:1
   |
LL | pub fn foo(x: i64) -> i64 {
   |                           - the nearest open delimiter
LL |     x.abs)
   |          - missing open `(` for this delimiter
LL | }
   | ^ unexpected closing delimiter

error: aborting due to 1 previous error

