tests/ui/parser/issues/unnessary-error-issue-138401.rs
pub fn foo(x: i64) -> i64 {
    x.abs)
}
//~^ ERROR unexpected closing delimiter: `}`

fn main() {}
